# selfai

./: .gitignore  pyproject.toml  test_3level_advanced.py  test_3level_enhanced.py  test_3level_mvp.py  test_autonomous_testing_advanced.py  test_autonomous_testing_enhanced.py  test_autonomous_testing_mvp.py  test_dashboard_playwright.py  test_dashboard_progress_enhanced.py  test_dashboard_progress_mvp.py  test_dashboard_stats_mvp.py  test_feature_advanced.py  test_feature_enhanced.py  test_feature_mvp.py  test_launchagent_mvp.py  test_log_analyzer_enhanced.py  test_process_improvement_enhanced.py  test_process_improvement_mvp.py  test_server_api.py  test_time_estimates_enhanced.py  test_time_estimates_mvp.py  test_worktree_enhanced.py  test_worktree_mvp.py
_selfai/: README.md  __main__.py  database.py  runner.py
docs/: LOG_ANALYSIS.md
examples/: log_analysis_demo.py
examples/demo_logs/: issues.json
selfai/: __init__.py  __main__.py  database.py  discovery.py  exceptions.py  healers.py  monitoring.py  monitors.py  runner.py  server.py  test_environment.py  utils.py  validators.py  worktree_manager.py
tests/: conftest.py  test_isolated_environment.py  test_task_resumption.py
